--- a/courses/templates/courses/index.html
+++ b/courses/templates/courses/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-  <center><h1>bu bir kurslar ana sayfasıdır.</h1></center>
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block page_title %}
+Kurslar
+{% endblock %}
+
+{% block content %}
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-3">
+
+            {% include 'courses/partials/_categories.html' %}
+
+
+        <div class="col-9">
+            <!-- İçerik buraya gelecek -->
+        </div>
+    </div>
+</div>
+{% endblock %}
